--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name = 'viewport'
         content = 'width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0'
   >
-    <title>full screen iframe</title> 
+    <title>BROTHERS TUTORIAL -HOME</title> 
 
     <style type="text/css"> 
 
